--- a/index.html
+++ b/index.html
@@ -64,9 +64,33 @@
 </div>
 </section>
 
+<section class="howCollabHelpContainer">
+    <h2>How does Collab-app help?</h2>
+    
+<div class="howHelpBox">
+    <div class="howHelpleft">
+        <div class="howHelpBtn">
+            <button class="howHelpVendorBtn btnHelp">Vendor app</button>
+            <button class="howHelpSupervisorBtn btnHelp">Site Supervisor app</button>
+    </div>
+    <div class="howHelpTextContainer"> 
+        <p class="howHelpText"><span>Work/Material request:</span>Whenever a client wants to start a work, request notifications with date and time for materials and artisians will be promted through their app.</p>
+        <p class="howHelpText"><span class="seeMore">Project Management:</span>Work on multiple projects...see more</p>
+        <p class="howHelpText"><span class="seeMore">Payment:</span> Get paid for the step by step work...see more</p>
+        <p class="howHelpText"><span class="seeMore">Tutorials:</span> Explore the video tutorials to learn... see more</p>
+            </div>
+        </div>
+        <div class=".howHelpRight">
+            <img src="/img/Rectangle.svg" alt="" class="howHelpPhone">
+        </div>
+    </div>
+</section>
 
+<section class="videoContainer"> 
+<h2>Fastest, Safest & Budget friendly</h2>
+<p class="videoPara">Managing your projects on spreadsheet  or messaging app is a time-taking and inefficient way.They can't link various project data effectively at once place , thus you won't be able to avoid project cost escalation effectively .</p>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" frameborder="0"></iframe>
+</section>
 </main>
-
 </html>
-
 </body>
