--- a/index.html
+++ b/index.html
@@ -91,6 +91,80 @@
 <p class="videoPara">Managing your projects on spreadsheet  or messaging app is a time-taking and inefficient way.They can't link various project data effectively at once place , thus you won't be able to avoid project cost escalation effectively .</p>
 <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" frameborder="0"></iframe>
 </section>
+
+<section class="projectsDoneContainer">
+<h2>Projects done on Collab</h2>
+<div class="projectDoneCardsConaiter">
+<div class="projectDoneCard">
+
+    <img src="./img/Rectangle 21.svg" alt="projectDoneImg">
+    <p class="projectDonePara1">Builders</p>
+    <p class="projectDonePara1">100+</p>
+</div>
+
+<div class="projectDoneCardsConaiter">
+<div class="projectDoneCard">
+    <img src="./img/Rectangle 34.svg" alt="projectDoneImg">
+    <p class="projectDonePara1">Contractors</p>
+    <p class="projectDonePara1">50+</p>
+</div>
+
+<div class="projectDoneCardsConaiter">
+<div class="projectDoneCard">
+    <img src="./img/Rectangle 35.svg" alt="projectDoneImg">
+    <p class="projectDonePara1">Design Build Firm</p>
+    <p class="projectDonePara1">30+</p>
+</div>
+
+</div>
+</section>
+
+<section class="collabAppsCardsContainer"></section>
+
+<h2>Ready to start with Collab apps?</h2>
+<p class="collabAppsCardsPara">Choose the package that suits you.</p>
+
+<div class="collabAppDiscount">
+    <span class="collabAppsDiscountMonthly">Monthly</span>
+    <img src="" alt="">
+    <span class="collabAppsDiscountYearly">Yearly</span>
+    <span class="collabAppsDiscountTenProcent">10% discount</span>
+</div>
+
+<div class="collabCardsContainer">
+<div class="card">
+    <h4>Basic</h4>
+    <h2>Rs.5000</h2>
+    <button class="collabCardsBtn">Request Demo</button>
+    <ul>
+        <li class="callbCardsList">Create BoQ</li>
+        <li class="callbCardsList">Release Purchase Orders</li>
+        <li class="callbCardsList">Cash flow analysis</li>
+    </ul>
+
+</div>
+<div class="card">
+    <h4>Essential</h4>
+    <h2>Rs.5000</h2>
+    <button class="collabCardsBtn">Request Demo</button>
+    <ul>
+        <li class="callbCardsList">Create BoQ</li>
+        <li class="callbCardsList">Release Purchase Orders</li>
+        <li class="callbCardsList">Cash flow analysis</li>
+        <li class="callbCardsList">Vendor App</li>
+        <li class="callbCardsList">Site Engineer App</li>
+        <li >Client App</li>
+    </ul>
+</div>
+<div class="card">
+    <h4>Enterprise</h4>
+    <h2>Contact sales team</h2>
+    <button>Request Demo</button>
+    <p>Unlock the full power to work effectively. Click “Request Demo” now.</p>
+</div>
+
+</div>
+
 </main>
 </html>
 </body>
